--- a/frontend/src/components/Toolbar.css
+++ b/frontend/src/components/Toolbar.css
@@ -1,4 +1,7 @@
 .toolbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     position: fixed;
     bottom: 0;
     width: 100%;
