--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,13 @@
-.content{
-  flex-direction: row;
-  margin-left: 10%; 
-  padding-left: 30px; 
-  padding-right: 20px;
+.app-container {
+  display: flex;
+  height: 100vh;
+}
+
+.content {
+  flex-grow: 1; 
+  padding: 10px 10px; 
+}
+
+.file-tree, .file-tree * {
+  padding: 0;
 }
